variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while (2*nbBiscuits = nbCaseOrange+1){
        ^RunHalf:5: error: not found: value nbBiscuit
  if(estSurBiscuit()) nbBiscuit+=1
                      ^